# cobot

./: README.md
src/cobot_bringup/: CMakeLists.txt  package.xml
src/cobot_bringup/launch/: bringup.launch.py
src/cobot_control/: CMakeLists.txt  package.xml
src/cobot_control/include/cobot_control/: speed_controller.hpp
src/cobot_control/src/: control_node.cpp  speed_controller.cpp
src/cobot_control/test/: test_speed_controller.cpp
src/cobot_simulation/: CMakeLists.txt  package.xml
src/cobot_simulation/launch/: simulation.launch.py
src/cobot_simulation/src/: emergency_stop_node.cpp  proximity_sensor_node.cpp
